src/objects/SF_182_Training__c.object
<CustomObject>
    <fields>
        <fullName>About_Approvals_Concurrence__c</fullName>
        <defaultValue>&quot;The Approval Process for each SSO/Regions differs.  If you are unaware of the approval chain please leave this section blank and your Supervisor/Approver(s) will add the necessary users for your request. If you are unaware of the &apos;Purchase Card Holder&apos; please leave this field blank, final approver of this request will be required to enter this information.&quot;</defaultValue>
        <label>About Approvals/Concurrence</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>About_the_GSA_Continuing_Srvc_Agreement__c</fullName>
        <defaultValue>&quot;You are required to select the ‘GSA Continuing Service Agreement’ button and accept the terms and conditions when the request&apos;s costs meet or exceed $3,000, or the amount of training hours meet or exceed 80 hours (includes training duty hours and training non duty hours).&quot;</defaultValue>
        <label>About the GSA Continuing Srvc Agreement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active_User__c</fullName>
        <formula>If(SF_182__r.Owner:User.IsActive, &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Name__c</fullName>
        <formula>Activity__r.Assignment_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Activity Name - This field is automatically populated with the name of the selected Activity</inlineHelpText>
        <label>Activity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Total_Cost__c</fullName>
        <formula>Activity__r.Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Activity Total Cost - The sum of the selected Activity&apos;s costs (Books and Materials + Tuition and Fees)</inlineHelpText>
        <label>Activity Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Activity - Please select the Developmental Activity (from your IDP) that is relevant to this training</inlineHelpText>
        <label>Activity</label>
        <referenceTo>IDP_Developmental_Line_Item__c</referenceTo>
        <relationshipLabel>SF 182 Request</relationshipLabel>
        <relationshipName>SF_182_Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Appropriation_Fund_Direct_Cost__c</fullName>
        <inlineHelpText>Appropriation Fund (Direct Cost) - If applicable, please enter the direct cost associated with this training procurement. A direct cost includes both tuition and fees as well as books and materials. Example format: 1000.</inlineHelpText>
        <label>Appropriation Fund (Direct Cost)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appropriation_Fund_InDirect_Cost__c</fullName>
        <inlineHelpText>Appropriation Fund (InDirect Cost) - If applicable, please enter the total indirect cost associated with this training opportunity.  Indirect costs include travel and per diem. Example format: 1000.</inlineHelpText>
        <label>Appropriation Fund (InDirect Cost)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Process_Instructions__c</fullName>
        <defaultValue>&quot;The Office of Human Resources Management is committed to helping GSA fulfill its mission by hiring, retaining, training, and recognizing the talent needed to get the job done. Our web presence is another way that we are reaching out to you to share information. Check back here often to find out the latest news on employee benefits, leave, telework, training and more.&quot;</defaultValue>
        <label>Approval Process Instructions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <inlineHelpText>Approver Status - This field indicates what step within the approval process the request is in (i.e. which of the selected supervisors/approvers is currently reviewing or approving the request)</inlineHelpText>
        <label>Approver Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending Supervisor Review</fullName>
                </value>
                <value>
                    <fullName>Reviewed by Supervisor</fullName>
                </value>
                <value>
                    <fullName>Pending Approver 1 Review</fullName>
                </value>
                <value>
                    <fullName>Reviewed by Approver 1</fullName>
                </value>
                <value>
                    <fullName>Pending Approver 2 Review</fullName>
                </value>
                <value>
                    <fullName>Reviewed by Approver 2</fullName>
                </value>
                <value>
                    <fullName>Pending Approver 3 Review</fullName>
                </value>
                <value>
                    <fullName>Reviewed by Approver 3</fullName>
                </value>
                <value>
                    <fullName>Pending Approver 4 Review</fullName>
                </value>
                <value>
                    <fullName>Reviewed by Approver 4</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Final Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Approver 1 - Please refer to your organizational structure to determine if another Approver is required</inlineHelpText>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SF_182_Trainings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Approver 2 - Please refer to your organizational structure to determine if another Approver is required</inlineHelpText>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SF_182_Trainings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Approver 3 - Please refer to your organizational structure to determine if another Approver is required</inlineHelpText>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SF_182_Trainings3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Instructions_c__c</fullName>
        <inlineHelpText>Billing Instructions - The requesting user should enter any details they may have about the registration and payment process of their training for the Purchase Card Holder to reference</inlineHelpText>
        <label>Billing Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Books_and_Materials__c</fullName>
        <inlineHelpText>Books and Materials - The requesting user should enter books and materials costs associated with this training that was paid for by the Federal Gov. (Refer to the Guide for HR Reporting at http://www.opm.gov/feddata/guidance.asp.) Example Format: 300.</inlineHelpText>
        <label>Books and Materials (Direct Cost)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSA_Hours_Remaining__c</fullName>
        <description>Calculates the number of hours remaining for an employee&apos;s CSA for a particular SF 182 Request. The formula is based on a 40-hour average work week.</description>
        <formula>IF( Total_Hours__c &gt;= 80 || Grand_Total_Training_Costs__c &gt;= 3000, 
  ( IF ( Training_End_Date__c &gt; Today(),
         Total_Hours__c*3, 
         IF ( ABS( Today() - Training_End_Date__c ) &gt; 7, 
              IF ( Total_Hours__c*3 - ABS(((Today() - Training_End_Date__c)/7) * 40) &gt; 0, 
              Total_Hours__c*3 - ABS(((Today() - Training_End_Date__c)/7) * 40),
              0  ), 
              IF ( Total_Hours__c*3 - ABS((Today() - Training_End_Date__c) * 8) &gt; 0, 
              Total_Hours__c*3 - ABS((Today() - Training_End_Date__c) * 8),
              0  ) 
             ) 
       )
   ) , 
-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSA Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancel_My_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cancel Training - Please contact your Supervisor if you need to cancel your training (this field is only editable by the Supervisor). Selecting this checkbox will void the training and the approval process will be discontinued.</inlineHelpText>
        <label>Cancel Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancel_Obligated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel Obligated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Continued_Srvc_Agreement_Accepted_Date__c</fullName>
        <inlineHelpText>Continued Srvc Agreement Accepted Date - This field is automatically populated with the date that you agreed to the GSA Continuing Service Agreement</inlineHelpText>
        <label>Continued Srvc Agreement Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Number__c</fullName>
        <inlineHelpText>Course Number - Please enter the course number of your training course or class</inlineHelpText>
        <label>Course Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Title_if_Diff_from_Activity_Name__c</fullName>
        <inlineHelpText>Course Title - Please enter the name of your training course or class</inlineHelpText>
        <label>Course Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cumulative_Amount__c</fullName>
        <formula>SF_182__r.Cumulative_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cumulative Amount - This is the sum of all amounts listed within the &quot;Total (TF and BM)&quot; of the related SF 182 Training form(s).</inlineHelpText>
        <label>Estimated Cumulative Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deadline_for_requesting_a_refund_Date__c</fullName>
        <inlineHelpText>Deadline for requesting a refund? - This field is only required if you select &quot;Yes&quot; within &quot;Is the money refundable?&quot;; please indicate the date in which the deadline for requesting a refund is. Example format: MM/DD/YYYY.</inlineHelpText>
        <label>Deadline for requesting a refund?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Digit_Station_Symbol__c</fullName>
        <inlineHelpText>Digit Station Symbol - Please enter the appropriate Digit Station Symbol. Example Format: 12-34-5678</inlineHelpText>
        <label>Digit Station Symbol</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_PO_Requisition_Number__c</fullName>
        <inlineHelpText>Document/PO/Requisition Number - The requisitioner, or the office with the NEED for the training service, must fill out a requisition for the acquisition of the supply/services. Example format: 2PSNN-14-0125.</inlineHelpText>
        <label>Document/PO/Requisition Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>I am the Final Approver - As a Supervisor/Approver check this field if no one else is required to approve this training (refer to your org structure); once this field is selected the Purchasing Training Coordinator will be notified to contact the vendor</inlineHelpText>
        <label>I am the Final Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Approves_Flag__c</fullName>
        <formula>IF( Final_Approver__c , &apos;true&apos;,&apos;false&apos;)</formula>
        <label>Final Approves Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Status__c</fullName>
        <inlineHelpText>Final Status - The overall final status of the SF 182</inlineHelpText>
        <label>Final Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Final Approval</fullName>
                </value>
                <value>
                    <fullName>Supervisor Approved</fullName>
                </value>
                <value>
                    <fullName>Approver 1 Approved</fullName>
                </value>
                <value>
                    <fullName>Approver 2 Approved</fullName>
                </value>
                <value>
                    <fullName>Approver 3 Approved</fullName>
                </value>
                <value>
                    <fullName>Approver 4 Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Source__c</fullName>
        <inlineHelpText>Funding Source - The funding source is the accounting and appropriation budget from which the supply/service will be paid. Example format: PJ4BA0227.</inlineHelpText>
        <label>Funding Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grand_Total_Training_Costs__c</fullName>
        <formula>SF182_Training_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Grand Total Training Costs - Sum of (TF and BM); you are required to accept the &apos;GSA Continuing Service Agreement&apos; when this amount exceeds 3K. This field will reset if a training is rejected, cancelled not obligated or cancelled but money is refundable.</inlineHelpText>
        <label>Grand Total Training Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_to_Approve_and_Select_Next_Approver__c</fullName>
        <defaultValue>&quot;If you are the ‘Supervisor’ then you should add the next approver in the ‘Approver 1’ field, if you are ‘Approver 1’ then you should add the next approver in the ‘Approver 2’ field, and etc. After reviewing the request  select the ‘Approve/Reject’ link next to your name in the ‘Approval History’ section at the bottom of the page. This will redirect you to the Approval page. Within the Approval page, enter any ‘Comments’ and then select the ‘Approve’ button.&quot;</defaultValue>
        <label>How to Approve and Select Next Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_to_Approve_as_a_Final_Approver__c</fullName>
        <defaultValue>&quot;If you are the final approver select ‘Edit’ and add the ‘Purchase Card Holder’ (i.e. the person who will ultimately contact the training vendor for payment and registration) within the &apos;Approvals/Concurrence&apos; section and then select the ‘Final Approver’ checkbox. Select the ‘Approve/Reject’ link next to your name in the ‘Approval History’ section  at the bottom of the page. This will redirect you to the Approval page. Within the Approval page, enter any ‘Comments’ and then select the ‘Approve’ button.&quot;</defaultValue>
        <label>How to Approve as a Final Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_to_Cancel_a_Request_Supv_Only__c</fullName>
        <defaultValue>&quot;As a Supervisor, if the requesting user contacts you to cancel their training, follow these steps. The requesting user must recall their request if it is pending another approver&apos;s review (aside from you the Supervisor). After the user recalls the request, select the ‘Cancel Training’ checkbox and Save.&quot;</defaultValue>
        <label>How to Cancel a Request (Supv Only)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_to_Reject_a_Request__c</fullName>
        <defaultValue>&quot;Select the ‘Approve/Reject’ link next to your name in the ‘Approval History’ section  at the bottom of the page. This will redirect you to the Approval/Reject page where you can enter any ‘Comments’ and then select the ‘Reject’ button. The requesting user will be notified about the rejected request. The request can then be changed and re-submitted for the approval process.&quot;</defaultValue>
        <label>How to Reject a Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_to_Resume_the_Approval_Process__c</fullName>
        <defaultValue>&quot;Here are the steps be taken if a Supervisor or Approver forgets to add the next Approver. Forgot to add the next Approver? No problem! Follow these steps: 1. Select ‘Edit’. 2. Add the next approver. 3. Select the ‘Resume Approval Process’ checkbox. 4. Select ‘Save’ (your required actions are complete). A notification will be sent to the requesting user to resubmit their request for approval. 5. Once the user selects submit, the approver that you had added will be notified to review the request and either approve or reject it.&quot;</defaultValue>
        <label>How to Resume the Approval Process</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IDP_Name__c</fullName>
        <formula>CASESAFEID(SF_182__r.IDP__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IDP Name - The name of the corresponding IDP</inlineHelpText>
        <label>IDP Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Offsite_list_City__c</fullName>
        <inlineHelpText>If Off-site, list City - If Off-site is selected from Location, list the name of the off-site city</inlineHelpText>
        <label>If Off-site, list City</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Offsite_list_State__c</fullName>
        <inlineHelpText>If Off-site, list State - If Off-site is selected from Location, list the name of the off-site state</inlineHelpText>
        <label>If Off-site, list State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <formula>&quot;Hello World&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions_to_Submit_for_Approval__c</fullName>
        <defaultValue>&quot;Save your request and scroll to the bottom of the request page and select ‘Submit for Approval&apos; to notify your Supervisor. If you need to make changes during the approval process just select the ‘Recall Approval Request’ button at the bottom of the request page. You can make your changes and you will then have to re-submit your request for approval.&quot;</defaultValue>
        <label>Instructions to Submit for Approval</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Vendor_Accredited__c</fullName>
        <inlineHelpText>Is Vendor Accredited? - Please indicate whether or not the vendor is accredited</inlineHelpText>
        <label>Is Vendor Accredited?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_Money_Refundable__c</fullName>
        <inlineHelpText>Is the Money Refundable? - This field is only required if you select &quot;Yes&quot; within &quot;Was money obligated?&quot;; please indicate if the money is refundable</inlineHelpText>
        <label>Is the Money Refundable?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_request_shared_with_me__c</fullName>
        <formula>IF(  ((Supervisor__c   =  $User.Id) || ( Purchasing_Training_Coordinator__c = $User.Id) ||  (Approver_1__c = $User.Id) || (Approver_2__c = $User.Id) || (Approver_3__c = $User.Id) || (Approver_4__c = $User.Id)), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is the request shared with me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>Location - Please indicate if the training course or class is On-site or Off-site</inlineHelpText>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On-site</fullName>
                </value>
                <value>
                    <fullName>Off-site</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Objective_Title__c</fullName>
        <formula>Activity__r.Developmental_Objective__r.Objective_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Objective Title - The name of the Activity&apos;s corresponding Objective</inlineHelpText>
        <label>Objective Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pegasys_Reference_QI__c</fullName>
        <inlineHelpText>Pegasys Reference QI - Please enter the appropriate Pegasys Reference QI</inlineHelpText>
        <label>Pegasys Reference QI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_for_me__c</fullName>
        <description>This field checks if the current user has any training requests pending for approval. The current user can be either Supervisor or Approver 1 - 4 or Purchase Card Holder. This field is being used on the list view filter on the IDP Launch Page link “SF 182 Approver/Supervisor View”</description>
        <formula>IF ( 

   ( (Supervisor__c  = $User.Id) &amp;&amp; ISPICKVAL(Approval_Status__c, &quot;Pending Supervisor Review&quot;) &amp;&amp;  ISPICKVAL( Request_Status__c , &quot;Approval Process in Progress&quot;) )
|| ( (Approver_1__c = $User.Id) &amp;&amp; ISPICKVAL(Approval_Status__c, &quot;Reviewed by Supervisor&quot;) &amp;&amp;  ISPICKVAL( Request_Status__c , &quot;Approval Process in Progress&quot;))
|| ( (Approver_2__c = $User.Id) &amp;&amp; ISPICKVAL(Approval_Status__c, &quot;Reviewed by Approver 1&quot;) &amp;&amp;  ISPICKVAL( Request_Status__c , &quot;Approval Process in Progress&quot;))
|| ( (Approver_3__c = $User.Id) &amp;&amp; ISPICKVAL(Approval_Status__c, &quot;Reviewed by Approver 2&quot;) &amp;&amp;  ISPICKVAL( Request_Status__c , &quot;Approval Process in Progress&quot;))
|| ( (Approver_4__c = $User.Id) &amp;&amp; ISPICKVAL(Approval_Status__c, &quot;Reviewed by Approver 3&quot;) &amp;&amp;  ISPICKVAL( Request_Status__c , &quot;Approval Process in Progress&quot;)
|| ( (Purchasing_Training_Coordinator__c = $User.Id) &amp;&amp;   ISBLANK(Appropriation_Fund_Direct_Cost__c ) &amp;&amp;  NOT (ISPICKVAL(Request_Status__c, &apos;Initiating&apos;)) )
)

, True, False)</formula>
        <label>Is the request pending on me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Per_Diem__c</fullName>
        <inlineHelpText>Per Diem - Insert the actual/final per diem cost (i.e. meals, lodging, miscellaneous expenses) for training completed by the employee that was paid for by the Federal Government. Example format: 400.</inlineHelpText>
        <label>Per Diem (Indirect Cost)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_Training_Coord_Instructions__c</fullName>
        <defaultValue>&quot;Please review all the details of the requesting user’s training request and contact the training vendor for payment and registration. The ‘Vendor Information’ section includes the contact details for the training vendor. The &apos;Costs and Billing Information - Purchase Card Holder&apos; section is only intended for the Purchase Card Holder to complete. The ‘Training Course Data’ section includes the information regarding the type of training and the ‘Cost and Billing Information - Training Requester’ section details the costs of the requested training.&quot;</defaultValue>
        <label>Purchase Card Holder Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Purchasing_Training_Coordinator_Group__c</fullName>
        <label>Purchase Card Holder Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IDP-IMS Program Support</fullName>
                </value>
                <value>
                    <fullName>IDP-ITC Program Support-Users</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchasing_Training_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Purchase Card Holder - Please refer to your organizational structure to determine your Purchase Card Holder; this is the person who will contact the training vendor for registration and payment</inlineHelpText>
        <label>Purchase Card Holder</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SF_182_Trainings5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <inlineHelpText>Request Status - Please refer to Instructions for status definitions</inlineHelpText>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approval Process in Progress</fullName>
                </value>
                <value>
                    <fullName>Final Approval</fullName>
                </value>
                <value>
                    <fullName>Initiating</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled Obligated</fullName>
                </value>
                <value>
                    <fullName>Cancelled Not Obligated</fullName>
                </value>
                <value>
                    <fullName>Correction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requester_Instructions_Activity_Info__c</fullName>
        <defaultValue>&quot;Please select the ‘Activity’ in which you are creating the request for.&quot;</defaultValue>
        <label>Requester Instructions - Activity Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requester_Instructions_Costs_Billing__c</fullName>
        <defaultValue>&quot;Please add the information specific to the costs of your activity / training and enter any specific instructions for the Purchase Card Holder within the ‘Billing Instructions’ field. If cancelled or rejected, the &apos;Grand Total Training Costs&apos; and &apos;Appropriation Fund (Direct Cost)&apos; fields will not be accounted for within the sum of the SF 182&apos;s &apos;Estimated Cumulative Amount&apos;.&quot;</defaultValue>
        <label>Requester Instructions - Costs &amp; Billing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requester_Instructions_General_Info__c</fullName>
        <defaultValue>&quot;Complete Activity, Vendor, Training Course Information, Training Codes and Costs sections. The ‘Request Status’ will automatically update based on the ‘Approvals/Concurrence’ section throughout the Approval process. Once training is completed, you should select the &apos;Training Completed&apos; check-box to close out the activity/training request.&quot;</defaultValue>
        <label>Requester Instructions - General Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requester_Instructions_Training_Course__c</fullName>
        <defaultValue>&quot;Please add information specific to your training course by completing the &apos;Training Course Data&apos; and &apos;Training Codes&apos; section.&quot;</defaultValue>
        <label>Requester Instructions - Training Course</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requester_Instructions_Vendor_Info__c</fullName>
        <defaultValue>&quot;Enter the name of the Vendor providing the training. if you cannot find the vendor using the search, use the &apos;New Vendor&apos; button to create the vendor. Additional reference material on how to create a new Vendor can be found on the IDP Resources section of the IDP Launch page.&quot;</defaultValue>
        <label>Requester Instructions - Vendor Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resubmit_Approval_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Resume Approval Process - A requesting user can check this field after they have recalled their request (but before they resubmit) if they would like to skip the approvers that have already reviewed the request &amp; send it directly to the next Approver</inlineHelpText>
        <label>Resume Approval Process</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>